# ruff

./: CONTRIBUTING.md  Cargo.toml  foo.py
.github/workflows/: mayhem.yaml
crates/ruff/: Cargo.toml
crates/ruff/fuzz/: Cargo.toml
crates/ruff/fuzz/fuzz_targets/: lint.rs
crates/ruff/src/: codes.rs  registry.rs
crates/ruff/src/checkers/ast/: mod.rs
crates/ruff/src/importer/: insertion.rs  mod.rs
crates/ruff/src/rules/flake8_type_checking/: helpers.rs
crates/ruff/src/rules/flake8_type_checking/rules/: typing_only_runtime_import.rs
crates/ruff/src/rules/pyflakes/rules/: undefined_local.rs
crates/ruff/src/rules/pyupgrade/rules/: native_literals.rs  super_call_with_parameters.rs
crates/ruff_python_ast/: Cargo.toml
crates/ruff_python_ast/src/: visitor.rs
crates/ruff_python_ast/src/source_code/: comment_ranges.rs
crates/ruff_python_ast/src/visitor/: preorder.rs
crates/ruff_python_formatter/fuzz/: Cargo.toml
crates/ruff_python_formatter/fuzz/fuzz_targets/: fmt.rs
crates/ruff_python_formatter/src/: lib.rs  transform.rs
crates/ruff_python_formatter/src/comments/: builder.rs  comments.rs  map.rs  mod.rs  node_key.rs  placement.rs
crates/ruff_python_formatter/src/comments/snapshots/: ruff_python_formatter__comments__comments__tests__debug.snap
crates/ruff_python_formatter/src/snapshots/: ruff_python_formatter__transform__tests__tree.snap.new
crates/ruff_python_semantic/src/: context.rs  model.rs  scope.rs
crates/ruff_python_semantic/src/analyze/: typing.rs
mayhem/: Dockerfile  fmt.mayhemfile  lint.mayhemfile
scripts/: add_rule.py
